@@ -1,3 +1,8 @@
+2007-07-28  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (asPlain): Conversion from
+	StructuredTextDocuments to PlainTextDocuments.
+
 2007-07-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R: Added convenience methods ("[", nrow, ncol)
